Fix: further App, HomeContainer alignment and formatting adjustments

--- a/src/App.css
+++ b/src/App.css
@@ -19,14 +19,14 @@
 }
 
 nav {
+  display: flex;
   align-items: center;
   background-color: #A4D555;
-  display: flex;
   font-size: 1.5em;
   /* height: 10vh; */
   justify-content: space-around;
-  width: 100%;
-  padding: 2%;
+  /* width: 50%; */
+  padding: 1%;
 }
 
 h1 {
