--- a/src/HomeContainer/HomeContainer.css
+++ b/src/HomeContainer/HomeContainer.css
@@ -1,19 +1,30 @@
 .HomeContainer {
     display: flex;
     background-color: rgb(163, 163, 163);
-    flex-direction: row;
+    /* flex-direction: row; */
+    flex-direction: column;
     /* justify-content: space-evenly; */
     justify-content: space-around;
-    align-items: center;
+    /* align-items: center; */
+    align-items: flex-start;
     width: 90vw;
     padding: 1em;
 }
 
-.left-side {
+/* .left-side {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   flex: .5;
+} */
+
+.left-right-sides {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-around;
+  /* flex: .5; */
+  width: 100%;
 }
 
 .ResultsContainer {
@@ -25,6 +36,7 @@ nav {
   gap: 1em;
   background-color: #f4f4f4;
   border-radius: 12px;
+  margin: 2%;
 }
 
 .nav {
